--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,16 @@
+@font-face {
+  font-family: "Inter";
+  src: url("../public/Inter.ttf") format("truetype");
+}
 body {
     margin: 20px;
     padding: 0;
+    font-family: "Inter";
+    font-weight: 400;
 }
 @media screen and (min-width: 961px) {
   .sidebar {
+    /* display: flex; */
     width: 40%
   }
 }
@@ -16,21 +23,23 @@ body {
 }
 
 .order-ques{
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
+
+
 .tab {
   display: flex;
   /* justify-content: space-around; */
   align-items: center;
   justify-items: baseline;
-  padding: 5% 5%;
+  padding: 3% 5% 0 5%;
   overflow: hidden;
 }
 
 .tab-button {
-  font-size: 10px;
+  /* font-size: 10px; */
   font-family: inherit;
+  font-weight: 600;
   padding: 20px 0px;
   border: 1px solid #ccc;
   background-color: transparent;
@@ -47,7 +56,6 @@ body {
   border-color: #866831;
   border-width: 2px;
   background-color: #fff;
-  /* color: #866831; */
 }
 
 .tab-button:hover {
@@ -64,4 +72,12 @@ body {
 
 .tab-content {
   margin-top: 20px;
+}
+
+
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 1200px) {
 }
