--- a/src/Components/Breadcrumb/breadcrumb.module.css
+++ b/src/Components/Breadcrumb/breadcrumb.module.css
@@ -1,16 +1,20 @@
 .breadcrumb {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-  }
-  
-  .breadcrumb a {
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .breadcrumb span {
-    color: #333;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.breadcrumb a {
+  text-decoration: none;
+  color: #333;
+}
+
+.breadcrumb span {
+  color: #333;
+}
+
+.breadcrumb-info{
+  font-weight: 600;
+}
