--- a/src/Components/Form1/form1.css
+++ b/src/Components/Form1/form1.css
@@ -1,3 +1,7 @@
+a{
+  color: #866831;
+  text-align: center;
+}
 .form-deliver {
     padding: 5%;
     margin: 2%;
@@ -51,6 +55,7 @@
     border-radius: 4px;
     box-sizing: border-box;
     font-family: inherit;
+    
   }
   .input-field:hover{
     border: solid 1px #000;
