--- a/src/Components/Form2/form2.css
+++ b/src/Components/Form2/form2.css
@@ -1,45 +1,53 @@
 .form-pickup {
-    padding: 5%;
-    margin: 2%;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-  }
-  
-  .form-group-pickup {
-    margin: 10px 0px;
-  }
-  
-  .form-group-pickup--half {
-    display: inline-grid;
-    /* width: calc(50% - 10px); */
-    width: calc(50% - 10px);
-    margin: 10px 0px;
-  }
-  
-  .form-group-pickup--submit {
-    display: flex;
-    justify-content: flex-end;
-    align-self: center;
-    padding: 2%;
-    height: 50px;
-  }
-  
-  .form-heading {
-    padding: 2%;
-    margin: 0;
-    font-size: 14px;
-  }
-  
-  button {
-    background-color: #866831;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    /* padding: 10px 20px; */
-  }
-  
-  /* .select-field {
+  padding: 5%;
+  margin: 2%;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+}
+.login-link{
+  font-weight: 400;
+   margin-block-end:auto;
+   font-size: 14px;
+}
+
+.form-group-pickup {
+  margin: 10px 0px;
+}
+
+.form-group-pickup--half {
+  display: inline-grid;
+  /* width: calc(50% - 10px); */
+  width: calc(50% - 10px);
+  margin: 10px 0px;
+}
+
+.form-group-pickup--submit {
+  display: flex;
+  justify-content: flex-end;
+  align-self: center;
+  padding: 2%;
+  height: 50px;
+}
+
+.form-heading {
+  padding: 1% 2% 0 2%;
+  margin: 0;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between;
+  margin-block-start: auto;
+}
+
+button {
+  background-color: #866831;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  /* padding: 10px 20px; */
+}
+
+/* .select-field {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
@@ -47,48 +55,47 @@
     background-color: #fff;
     box-sizing: border-box;
   } */
-  /* 
+/* 
   .input-field,
   .select-field, */
-  button {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  .button {
-    background-color: #866831;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+button {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
-  .go-back-link {
-    font-size: 12px;
-    font-family: inherit;
-    margin: auto;
-    text-align: center;
-    cursor: pointer;
-    color: #866831;
-  }
-  
-  @media (min-width: 768px) {
-    /* .form-group-pickup {
+.button {
+  background-color: #866831;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.go-back-link {
+  font-size: 12px;
+  font-family: inherit;
+  margin: auto;
+  text-align: center;
+  cursor: pointer;
+  color: #866831;
+}
+
+@media (min-width: 768px) {
+  /* .form-group-pickup {
       margin-bottom: 30px;
     } */
-  
-    .input-field,
-    .select-field {
-      /* width: calc(50% - 10px); */
-      width: calc(100% - 0px);
-      /* margin-right: 10px; */
-    }
-  
-    .button {
-      width: auto;
-    }
+
+  .input-field,
+  .select-field {
+    /* width: calc(50% - 10px); */
+    width: calc(100% - 0px);
+    /* margin-right: 10px; */
   }
-  
+
+  .button {
+    width: auto;
+  }
+}
