responsive design and some fixes

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,7 +14,6 @@ body {
     width: 40%
   }
 }
-
 .is-sticky {
   position: fixed;
   top: 10px;
@@ -24,6 +23,7 @@ body {
 
 .order-ques{
   text-align: center;
+  margin: 30px 5px 5px 5px;
 }
 
 
@@ -76,8 +76,3 @@ body {
 
 
 
-@media (min-width: 768px) {
-}
-
-@media (min-width: 1200px) {
-}
