--- a/src/Components/Breadcrumb/breadcrumb.module.css
+++ b/src/Components/Breadcrumb/breadcrumb.module.css
@@ -4,6 +4,8 @@
   align-items: center;
   text-align: center;
   justify-content: center;
+  font-size: 14px;
+  margin-top: 10px;
 }
 
 .breadcrumb a {
