--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,5 +1,6 @@
 .footer{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 5px 0 5px;
-  }
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 5px 0 5px;
+  font-size: 14px;
+}
