--- a/src/Components/Form2/form2.css
+++ b/src/Components/Form2/form2.css
@@ -91,7 +91,7 @@ button {
   .input-field,
   .select-field {
     /* width: calc(50% - 10px); */
-    width: calc(100% - 0px);
+    /* width: calc(100% - 0px); */
     /* margin-right: 10px; */
   }
 
